--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+u-boot (2021.01+dfsg-5) unstable; urgency=medium
+
+  * debian/patches: Fix boot failure caused by efi loader switching to
+    non-secure mode too early. Thanks to Bastian Germann and Heinrich
+    Schuchardt. (Closes: #988217)
+
+ -- Vagrant Cascadian <vagrant@debian.org>  Sat, 22 May 2021 21:32:45 -0700
+
 u-boot (2021.01+dfsg-4) unstable; urgency=medium
 
   [ Arnaud Ferraris ]
