--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+u-boot (2021.01+dfsg-4ubuntu3) impish; urgency=medium
+
+  * Implement u-boot-sifive.postinst to upgrade u-boot in loader1/loader2
+    partitions upon package upgrades. LP: #1936370
+
+ -- Dimitri John Ledkov <dimitri.ledkov@canonical.com>  Thu, 15 Jul 2021 13:01:50 +0100
+
 u-boot (2021.01+dfsg-4ubuntu2) impish; urgency=medium
 
   * Revert '* debian/rules: Ensure debugging symbols are enabled.' as it
