--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+u-boot (2021.07+dfsg-0ubuntu2) impish; urgency=medium
+
+  * Import meta-sifive patch series.
+
+ -- Dimitri John Ledkov <dimitri.ledkov@canonical.com>  Fri, 23 Jul 2021 17:14:09 +0100
+
 u-boot (2021.07+dfsg-0ubuntu1) impish; urgency=medium
 
   * New upstream release.
