--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+u-boot (2021.07+dfsg-0ubuntu5) impish; urgency=medium
+
+  * Build against opensbi with reboot support on Unmatched
+  * Bump cpu clock speed to 1.5GHz on Unmatched LP: #1941622
+  * In postinst support Unmatched model name without A00 suffix, as used
+    by meta-sifive kernels and may be contributed upstream in the future.
+
+ -- Dimitri John Ledkov <dimitri.ledkov@canonical.com>  Wed, 25 Aug 2021 17:22:24 +0100
+
 u-boot (2021.07+dfsg-0ubuntu4) impish; urgency=medium
 
   * sifive boards: re-enable back USE_PREBOOT< it used to be there in
